appId: co.openvine.app
---
#TC to search for a user,
# given the user is logged in in the app,
# input video description and validate its playback
#Steps:
# 1. Tap on Search: Validate search screen
# 2. Input text SEARCH_USER: Validate user is found
# 3. Tap on the Users tab: Validate user is listed
# 4. Tap on the user listed: validate user profile is displayed

# 1. Tap on Search: Validate search screen
- tapOn: Search
- runFlow: ../asserts/assertSearch.yml

# 2. Input text "lele": Validate user is found
- tapOn: Find something cool...
- inputText: ${SEARCH_USER}
#Assert Users result
- assertVisible: |-
    Users \((?!0)\d+\)
    Tab 2 of 3

# 3. Tap on the Users tab: Validate user is listed
- tapOn: |-
    Users \((?!0)\d+\)
    Tab 2 of 3
- assertVisible:
    text: ${SEARCH_USER_DESCRIPTION}

# 4. Tap on the user listed: validate user profile is displayed
- tapOn:
    point: 4%,28%
#TO-DO: once id is added to the profile button tap it and validate we are on the user profile
- tapOn:
    id: ${SEARCH_USER_ID}
- runFlow:
    file: ../asserts/assertUserProfile.yml
    env:
      USER_NAME: ${SEARCH_USER}
      USER_BIO: ${SEARCH_USER_BIO}
